[tool.poetry]
name = "demos"
version = "0.1.0"
description = ""
authors = ["ixti-daniel <daniel@ixti.fi>"]
readme = "README.md"
packages = [{include = "demos", from = "src"}]

[tool.poetry.dependencies]
python = "==3.9.2"
pytest = "^7.4.3"
adafruit-blinka = { platform = "linux", version = "^8.29.0"}
rpi-gpio = { platform = "linux", version = "^0.7.1"}
numpy = "^1.26.3"

[tool.poetry.group.pygamewin.dependencies]
pygame = [
 { version = "==2.5.2", markers = "sys_platform == 'win32'", source = "pypi" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
